Fix header animation flicker bug

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -25,14 +25,12 @@ button {
   justify-items: center;
   min-height: 100vh;
   grid-template-columns: 1fr;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: 1fr auto;
   grid-template-areas:
-    'header'
     'main'
     'footer';
 
   header {
-    grid-area: header;
     width: 100%;
   }
 
